# MCP-Core

./: LICENSE  README.md  pyproject.toml
src/server/: server.py
src/server/tools/: web_scraper.py
src/server/utils/: scraper.py
